src/test/deca/syntax/invalid/renduInter01/02missing_condition_if.deca
// Description:
//      tests de programme incorrecte lexicalement (il manque une condition dans les parenthèses)
//
// Resultats:
//      Erreur syntaxique
//      Ligne 10 : manque une condition (=> token ')' inattendu)

{
    int x = 4;
    if ( ) {
        println("hello if", x);
    } else {
        println("hello else_if2 : ", x);
    }

}
